# dxc-doctor

./: Makefile  README.md  dxc-doctor.spec  entry.py  pyproject.toml
docs/: WRITING_MODULES.md
docs/plans/: 2026-02-27-html-report-design.md  2026-02-27-html-report-plan.md
src/dxc_doctor/: __init__.py  __main__.py  app.py  config.py  html_report.py  mascot.py  models.py  plugin_manager.py  report.py  runner.py
src/dxc_doctor/modules/ansible/: plugin.yaml
src/dxc_doctor/modules/audit_selinux/: plugin.yaml
src/dxc_doctor/modules/certificates/: collector.py  plugin.yaml
src/dxc_doctor/modules/cron/: collector.py  plugin.yaml
src/dxc_doctor/modules/crypto_policy/: plugin.yaml
src/dxc_doctor/modules/disk_health/: collector.py  plugin.yaml
src/dxc_doctor/modules/dns/: collector.py  plugin.yaml
src/dxc_doctor/modules/docker/: plugin.yaml
src/dxc_doctor/modules/filesystem/: collector.py  plugin.yaml
src/dxc_doctor/modules/firewall/: plugin.yaml
src/dxc_doctor/modules/gpu/: plugin.yaml
src/dxc_doctor/modules/hardware/: plugin.yaml
src/dxc_doctor/modules/java/: plugin.yaml
src/dxc_doctor/modules/journal_logs/: plugin.yaml
src/dxc_doctor/modules/kernel/: collector.py  plugin.yaml
src/dxc_doctor/modules/kubernetes/: plugin.yaml
src/dxc_doctor/modules/limits/: collector.py  plugin.yaml
src/dxc_doctor/modules/lvm/: plugin.yaml
src/dxc_doctor/modules/memory/: collector.py  plugin.yaml
src/dxc_doctor/modules/network/: collector.py  plugin.yaml
src/dxc_doctor/modules/nfs/: plugin.yaml
tests/: test_core.py
(+20 files in other folders)
