[build-system]
requires = ["setuptools>=64", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "dxc-doctor"
version = "0.1.0"
description = "Portable Linux diagnostic/data collection TUI tool"
requires-python = ">=3.9"
dependencies = [
    "textual>=0.47.0",
    "pyyaml>=6.0",
]

[project.scripts]
dxc-doctor = "dxc_doctor.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]
build = [
    "pyinstaller>=6.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
